--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Calcolo prezzo</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1></h1>
+  <div class="container custom">
+    <h2>Il prezzo del tuo biglietto è</h2>
+    <h1 id="price">prezzo</h1>
+  </div>
   <script src="js/script.js"></script>
 </body>
 </html>
